feat: add incremental run support with result status filtering
- 新增 skip_result_statuses 配置项，支持根据历史 Excel 中的合同状态跳过已完成任务（SUCCESS/NOT_FOUND_CONTRACT/NO_COOPERATION/NO_CHAT_GROUP）
- 实现结构化 JSON 日志系统（JsonLogger），支持 traceId、进度追踪与文件落盘，便于问题排查与可观测性
- 优化 OpenAPI 客户端错误处理，增加业务码识别（110107/99991400/99991663）与本地退避重试逻辑，提升限流场

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -41,3 +41,9 @@ retry:
   max_delay_ms: 10000
   # 抖动比例（0~1，用于避免雪崩效应）
   jitter: 0.2
+  # 结果状态白名单：若历史 Excel 中合同状态属于该列表，则本次运行跳过重跑
+  skip_result_statuses:
+    - SUCCESS
+    - NOT_FOUND_CONTRACT
+    - NO_COOPERATION
+    - NO_CHAT_GROUP
